spent almost 4 hours rotting my brain. the reason i was running into issues was becuase of CSS styling that was messing things up with how the render panel looked. getting rid of white-space:pre-wrap; in the .md-preview-panel css styling fixed everything immediately. oh my god. im not cut out for this.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -86,7 +86,7 @@
 
 /* Editor content should fill the available space: */
 .editor-container, .md-preview-panel {
-  white-space: pre-wrap; /* DEBUG: "keeps line breaks" */
+  /*white-space: pre-wrap;*/ /* DEBUG: "keeps line breaks" */
   word-wrap: break-word;
   width:100%;
   height:100%;
